# sidpico

./: CMakeLists.txt  LICENSE  README.md  pins.txt
src/: CMakeLists.txt  sid.h  sid_pico.c  sid_pico.h  sid_server.c  sid_server.h  sidpio.pio
